--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "eslint-config-next": "14.2.4",
     "next": "14.2.4",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.1.11",
+    "tsparticles": "^3.5.0"
   }
 }
